<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="48dp">

        <TextView
            android:id="@+id/accountInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#F5F5F5"
            android:textSize="18sp" />

        <Button
            android:id="@+id/remoteButton"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/remote_control" />

        <Button
            android:id="@+id/clearCacheButton"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/clear_image_cache" />

        <Button
            android:id="@+id/aboutButton"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/about" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/logout" />

        <TextView
            android:id="@+id/aboutText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColor="@color/text_secondary"
            android:textSize="13sp" />
    </LinearLayout>
</ScrollView>
